Changelog for 0.6.1
* Bugfix: Christine cannot import folders

