@@ -1,4 +1,5 @@
 Changelog for 0.6.1
 * Bugfix: Christine cannot import folders
+* Win32: Removed Christine from the start menu
 
 
